Update for multiroom