@@ -19,12 +19,21 @@ import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.stream.Collectors;
 
+/**
+ * 全局谱面池定义与 ChartInfo 缓存。
+ *
+ * 只负责：
+ * - pool 定义（chart-pools.json，存 id / favorite_id / chart_ids / default）
+ * - ChartInfo 持久化缓存（chart-info-cache.json）与预拉取
+ * - 池定义的新增/删除/修改
+ *
+ * 运行时状态（当前池、pending、轮次计数、favorite 覆盖等）由每个房间自己的 {@link RoomChartPool} 维护，
+ * 房间创建时固化池列表，之后不受全局定义变化影响；服务重启后房间不保留，运行时状态不持久化。
+ */
 public final class ChartPool {
 
     private static final Path POOL_FILE = Path.of("data", "chart-pools.json");
     private static final Path CACHE_FILE = Path.of("data", "chart-info-cache.json");
-    private static final int DEFAULT_REFRESH_INTERVAL_ROUNDS = 5;
-    private static final int DEFAULT_SELECT_CHART_COUNTDOWN_SECONDS = 150;
     private static final int[][] DEFAULT_POOL_CHART_IDS = {
             {30474, 42058},
             {33530, 52087}
@@ -34,7 +43,7 @@ public final class ChartPool {
     }.getType();
 
     private static final Map<Integer, ChartInfo> CHART_INFOS = new ConcurrentHashMap<>();
-    private static PoolConfig config;
+    private static List<PoolDefinition> pools = new ArrayList<>();
 
     private ChartPool() {
     }
@@ -42,14 +51,14 @@ public final class ChartPool {
     public static synchronized void preload() throws IOException {
         Files.createDirectories(POOL_FILE.getParent());
         loadCache();
-        loadOrCreateConfig();
-        normalizeConfig();
-        validateConfig();
+        loadOrCreatePools();
+        normalizePools();
+        validatePools();
         for (int id : getAllChartIds()) {
             loadChartInfo(id);
         }
         saveCache();
-        saveConfig();
+        savePools();
     }
 
     public static synchronized List<PoolSnapshot> listPools() {
@@ -58,59 +67,26 @@ public final class ChartPool {
                 .toList();
     }
 
-    public static synchronized PoolSnapshot getCurrentPoolSnapshot() {
-        return snapshotOf(config.currentPool);
+    /**
+     * 所有默认启用（default=true）的 pool 快照，按 id 排序。用于玩家创建房间时的固化池列表。
+     */
+    public static synchronized List<PoolSnapshot> getDefaultPools() {
+        return sortedPools().stream()
+                .filter(pool -> pool.defaultFlag)
+                .map(ChartPool::snapshotOf)
+                .toList();
     }
 
-    public static synchronized PoolStatus getStatus() {
-        return new PoolStatus(
-                config.currentPool.id,
-                config.pendingPoolId,
-                config.refreshIntervalRounds,
-                config.finishedRoundsSinceRefresh,
-                config.selectChartCountdownSeconds
-        );
-    }
-
-    public static synchronized void switchPool(int poolId) {
-        PoolDefinition pool = requirePool(poolId);
-        validateNonEmpty(pool);
-        config.pendingPoolId = poolId;
-        saveConfigUnchecked();
-    }
-
-    public static synchronized void setRefreshInterval(int rounds) {
-        if (rounds <= 0) {
-            throw new IllegalArgumentException("Refresh interval must be positive");
-        }
-
-        config.refreshIntervalRounds = rounds;
-        saveConfigUnchecked();
-    }
-
-    public static synchronized int getSelectChartCountdownSeconds() {
-        return config.selectChartCountdownSeconds;
-    }
-
-    public static synchronized void setSelectChartCountdownSeconds(int seconds) {
-        if (seconds < 10) {
-            throw new IllegalArgumentException("Countdown seconds must be at least 10");
-        }
-
-        config.selectChartCountdownSeconds = seconds;
-        saveConfigUnchecked();
-    }
-
-    public static synchronized void finishPlayingRound() {
-        config.finishedRoundsSinceRefresh++;
-        if (config.finishedRoundsSinceRefresh >= config.refreshIntervalRounds) {
-            refreshCurrentPool();
-        }
-        saveConfigUnchecked();
+    /**
+     * 查找全局 pool 定义快照，不存在返回 null。
+     */
+    public static synchronized PoolSnapshot findPool(int poolId) {
+        PoolDefinition pool = findPoolDefinition(poolId);
+        return pool == null ? null : snapshotOf(pool);
     }
 
     public static synchronized void addPool(int poolId, List<Integer> chartIds) throws IOException {
-        if (findPool(poolId) != null) {
+        if (findPoolDefinition(poolId) != null) {
             throw new IllegalArgumentException("Pool already exists: " + poolId);
         }
         if (chartIds.isEmpty()) {
@@ -122,23 +98,23 @@ public final class ChartPool {
             loadChartInfo(chartId);
         }
 
-        config.pools.add(new PoolDefinition(poolId, null, distinctChartIds));
+        pools.add(new PoolDefinition(poolId, null, false, distinctChartIds));
         saveCache();
-        saveConfig();
+        savePools();
     }
 
     public static synchronized void removePool(int poolId) {
         PoolDefinition pool = requirePool(poolId);
-        if (config.pools.size() == 1) {
+        if (pools.size() == 1) {
             throw new IllegalArgumentException("Cannot remove the last pool");
         }
-
-        config.pools.remove(pool);
-        if (config.pendingPoolId != null && config.pendingPoolId == poolId) {
-            config.pendingPoolId = null;
+        if (pool.defaultFlag && countDefaultPools() == 1) {
+            throw new IllegalArgumentException("Cannot remove the last default pool");
         }
-        validateConfig();
-        saveConfigUnchecked();
+
+        pools.remove(pool);
+        validatePools();
+        savePoolsUnchecked();
     }
 
     public static synchronized void addChart(int poolId, int chartId) throws IOException {
@@ -150,7 +126,7 @@ public final class ChartPool {
 
         pool.chartIds.add(info.getId());
         saveCache();
-        saveConfig();
+        savePools();
     }
 
     public static synchronized void removeChart(int poolId, int chartId) {
@@ -163,24 +139,22 @@ public final class ChartPool {
         }
 
         pool.chartIds.remove(Integer.valueOf(chartId));
-        saveConfigUnchecked();
+        savePoolsUnchecked();
     }
 
     public static synchronized void setFavoriteId(int poolId, Integer favoriteId) {
         PoolDefinition pool = requirePool(poolId);
         pool.favoriteId = favoriteId;
-        saveConfigUnchecked();
+        savePoolsUnchecked();
     }
 
-    public static synchronized void setCurrentFavoriteId(Integer favoriteId) {
-        config.currentPool.favoriteId = favoriteId;
-        saveConfigUnchecked();
-    }
-
-    public static synchronized List<ChartInfo> getCurrentPool() {
-        return config.currentPool.chartIds.stream()
-                .map(ChartPool::requireChartInfo)
-                .toList();
+    public static synchronized void setDefaultFlag(int poolId, boolean defaultFlag) {
+        PoolDefinition pool = requirePool(poolId);
+        if (pool.defaultFlag == defaultFlag) {
+            return;
+        }
+        pool.defaultFlag = defaultFlag;
+        savePoolsUnchecked();
     }
 
     public static ChartInfo getChartInfo(int chartId) {
@@ -191,45 +165,27 @@ public final class ChartPool {
         return pool.stream().anyMatch(chart -> chart.getId() == chartId);
     }
 
-    private static void refreshCurrentPool() {
-        if (config.pendingPoolId != null) {
-            config.currentPool = copyOf(requirePool(config.pendingPoolId));
-            config.pendingPoolId = null;
-        } else {
-            List<PoolDefinition> pools = sortedPools();
-            int index = 0;
-            for (int i = 0; i < pools.size(); i++) {
-                if (pools.get(i).id == config.currentPool.id) {
-                    index = i;
-                    break;
-                }
-            }
-            config.currentPool = copyOf(pools.get((index + 1) % pools.size()));
-        }
-        config.finishedRoundsSinceRefresh = 0;
-    }
-
-    private static void loadOrCreateConfig() throws IOException {
+    private static void loadOrCreatePools() throws IOException {
         if (Files.exists(POOL_FILE)) {
             try (Reader reader = Files.newBufferedReader(POOL_FILE)) {
-                config = GsonUtil.getGson().fromJson(reader, PoolConfig.class);
+                PoolConfig config = GsonUtil.getGson().fromJson(reader, PoolConfig.class);
+                if (config != null && config.pools != null) {
+                    pools = config.pools;
+                    return;
+                }
             }
-            return;
         }
 
-        config = new PoolConfig();
-        config.refreshIntervalRounds = DEFAULT_REFRESH_INTERVAL_ROUNDS;
-        config.selectChartCountdownSeconds = DEFAULT_SELECT_CHART_COUNTDOWN_SECONDS;
-        config.finishedRoundsSinceRefresh = 0;
+        pools = new ArrayList<>();
         for (int i = 0; i < DEFAULT_POOL_CHART_IDS.length; i++) {
             List<Integer> chartIds = new ArrayList<>();
             for (int id : DEFAULT_POOL_CHART_IDS[i]) {
                 chartIds.add(id);
             }
-            config.pools.add(new PoolDefinition(i, null, chartIds));
+            // 默认配置中第一个池默认启用，保证玩家开箱即可创建房间。
+            pools.add(new PoolDefinition(i, null, i == 0, chartIds));
         }
-        config.currentPool = copyOf(config.pools.get(0));
-        saveConfig();
+        savePools();
     }
 
     private static void loadCache() throws IOException {
@@ -265,87 +221,56 @@ public final class ChartPool {
     }
 
     private static PoolDefinition requirePool(int poolId) {
-        PoolDefinition pool = findPool(poolId);
+        PoolDefinition pool = findPoolDefinition(poolId);
         if (pool == null) {
             throw new IllegalArgumentException("Pool not found: " + poolId);
         }
         return pool;
     }
 
-    private static PoolDefinition findPool(int poolId) {
-        return config.pools.stream()
+    private static PoolDefinition findPoolDefinition(int poolId) {
+        return pools.stream()
                 .filter(pool -> pool.id == poolId)
                 .findFirst()
                 .orElse(null);
     }
 
+    private static long countDefaultPools() {
+        return pools.stream().filter(pool -> pool.defaultFlag).count();
+    }
+
     private static List<PoolDefinition> sortedPools() {
-        return config.pools.stream()
+        return pools.stream()
                 .sorted(Comparator.comparingInt(pool -> pool.id))
                 .toList();
     }
 
-    private static void normalizeConfig() {
-        if (config == null) {
-            config = new PoolConfig();
+    private static void normalizePools() {
+        if (pools == null) {
+            pools = new ArrayList<>();
         }
-        if (config.pools == null) {
-            config.pools = new ArrayList<>();
-        }
-        if (config.refreshIntervalRounds <= 0) {
-            config.refreshIntervalRounds = DEFAULT_REFRESH_INTERVAL_ROUNDS;
-        }
-        if (config.selectChartCountdownSeconds < 10) {
-            config.selectChartCountdownSeconds = DEFAULT_SELECT_CHART_COUNTDOWN_SECONDS;
-        }
-        if (config.finishedRoundsSinceRefresh < 0) {
-            config.finishedRoundsSinceRefresh = 0;
-        }
-        for (PoolDefinition pool : config.pools) {
-            normalizePool(pool);
-        }
-        if (config.currentPool == null && !config.pools.isEmpty()) {
-            config.currentPool = copyOf(sortedPools().get(0));
-        }
-        if (config.currentPool != null) {
-            normalizePool(config.currentPool);
+        for (PoolDefinition pool : pools) {
+            if (pool.chartIds == null) {
+                pool.chartIds = new ArrayList<>();
+            }
+            pool.chartIds = distinct(pool.chartIds);
         }
     }
 
-    private static void normalizePool(PoolDefinition pool) {
-        if (pool.chartIds == null) {
-            pool.chartIds = new ArrayList<>();
-        }
-        pool.chartIds = distinct(pool.chartIds);
-    }
-
-    private static void validateConfig() {
-        if (config.pools.isEmpty()) {
+    private static void validatePools() {
+        if (pools.isEmpty()) {
             throw new IllegalStateException("No chart pools configured");
         }
 
-        for (PoolDefinition pool : config.pools) {
-            validateNonEmpty(pool);
+        for (PoolDefinition pool : pools) {
+            if (pool == null || pool.chartIds == null || pool.chartIds.isEmpty()) {
+                throw new IllegalStateException("Pool cannot be empty");
+            }
         }
-
-        validateNonEmpty(config.currentPool);
-        if (config.pendingPoolId != null) {
-            requirePool(config.pendingPoolId);
-        }
-    }
-
-    private static void validateNonEmpty(PoolDefinition pool) {
-        if (pool == null || pool.chartIds == null || pool.chartIds.isEmpty()) {
-            throw new IllegalStateException("Pool cannot be empty");
-        }
-    }
-
-    private static PoolDefinition copyOf(PoolDefinition pool) {
-        return new PoolDefinition(pool.id, pool.favoriteId, List.copyOf(pool.chartIds));
     }
 
     private static PoolSnapshot snapshotOf(PoolDefinition pool) {
-        return new PoolSnapshot(pool.id, pool.favoriteId, List.copyOf(pool.chartIds));
+        return new PoolSnapshot(pool.id, pool.favoriteId, pool.defaultFlag, List.copyOf(pool.chartIds));
     }
 
     private static List<Integer> distinct(List<Integer> chartIds) {
@@ -355,25 +280,24 @@ public final class ChartPool {
     }
 
     private static List<Integer> getAllChartIds() {
-        List<Integer> chartIds = new ArrayList<>(config.currentPool.chartIds);
-        config.pools.stream()
+        return pools.stream()
                 .flatMap(pool -> pool.chartIds.stream())
-                .forEach(chartIds::add);
-        return chartIds.stream()
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    private static void saveConfig() throws IOException {
+    private static void savePools() throws IOException {
         Files.createDirectories(POOL_FILE.getParent());
+        PoolConfig config = new PoolConfig();
+        config.pools = pools;
         try (Writer writer = Files.newBufferedWriter(POOL_FILE)) {
             GsonUtil.getGson().toJson(config, writer);
         }
     }
 
-    private static void saveConfigUnchecked() {
+    private static void savePoolsUnchecked() {
         try {
-            saveConfig();
+            savePools();
         } catch (IOException e) {
             throw new IllegalStateException("Failed to save chart pools", e);
         }
@@ -389,29 +313,23 @@ public final class ChartPool {
         }
     }
 
-    public record PoolSnapshot(int id, Integer favoriteId, List<Integer> chartIds) {
-    }
-
-    public record PoolStatus(int currentPoolId, Integer pendingPoolId, int refreshIntervalRounds, int finishedRoundsSinceRefresh, int selectChartCountdownSeconds) {
+    public record PoolSnapshot(int id, Integer favoriteId, boolean defaultFlag, List<Integer> chartIds) {
     }
 
     private static final class PoolConfig {
-        private PoolDefinition currentPool;
-        private Integer pendingPoolId;
-        private int refreshIntervalRounds;
-        private int finishedRoundsSinceRefresh;
-        private int selectChartCountdownSeconds;
         private List<PoolDefinition> pools = new ArrayList<>();
     }
 
     private static final class PoolDefinition {
         private int id;
         private Integer favoriteId;
+        private boolean defaultFlag;
         private List<Integer> chartIds = new ArrayList<>();
 
-        private PoolDefinition(int id, Integer favoriteId, List<Integer> chartIds) {
+        private PoolDefinition(int id, Integer favoriteId, boolean defaultFlag, List<Integer> chartIds) {
             this.id = id;
             this.favoriteId = favoriteId;
+            this.defaultFlag = defaultFlag;
             this.chartIds = new ArrayList<>(chartIds);
         }
     }
